--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<img id="profile-photo" src="images/foto.jpg" alt="Foto de perfil">
 			<div class="section-info"">
 				<h2>Sobre Mim</h2>
-				<p>Me chamo Marcelo Gyovani Pereira e sou graduando do curso de Ciência da Computação da Universidade Federal do Paraná (UFPR). Sou um membro do laboratório de Segurança e Engenharia Reversa (SECRET) do Departamento de Informática. Tenho interesse na área de redes de computadores.</p>
+				<p>Me chamo Marcelo Gyovani Pereira e sou graduando do curso de Ciência da Computação da Universidade Federal do Paraná (UFPR). Sou um membro do laboratório de Segurança e Engenharia Reversa (SECRET) do Departamento de Informática. Sou entusiasta da área de redes de computadores, sempre em busca de novas oportunidades para aplicar e expandir meus conhecimentos nesse campo.</p>
 				<h2>Tecnologias</h2>
 				<ul id="tech-list">
 					<li>C</li>
@@ -57,7 +57,7 @@
 				<div id="NIEPx" class="project-info">
 					<a class="project-anchor" href="https://github.com/marzelop/NIEP-GUI" target="_blank"><h2>NIEPx</h2></a>
 					<img src="images/NIEPx.png" alt="Imagem NIEPx">
-					<p>O NIEPx é uma interface gráfica desenvolvida para a definição e edição de topologias para o <i>NFV Infrastructure Emulation Platform</i> (NIEP), um emulador de redes com suporte a arquitetura NFV. O NIEPx é capaz de criar topologias de uma forma visual intuitiva, possibilitando a configuração, exportação e execução remote de topologias por meio de uma interface HTTP do NIEP.</p>
+					<p>O NIEPx é uma interface gráfica desenvolvida para a definição e edição de topologias para o <i>NFV Infrastructure Emulation Platform</i> (NIEP), um emulador de redes com suporte à arquitetura NFV. O NIEPx é capaz de criar topologias de uma forma visual intuitiva, possibilitando a configuração, exportação e execução remote de topologias por meio de uma interface HTTP do NIEP.</p>
 					<span><b>Tecnologias:</b> Python e Qt (PySide6)</span>
 				</div>
 				<div id="memalloc" class="project-info">
