--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 	<footer>
 		<h2 id="contact">Contato</h2>
 		<div id="contact-container">
-			<a href="https://www.linkedin.com/in/marcelo-pereira-170607236/?trk=opento_sprofile_goalscard"><img src="images/linkedin-logo.png" alt="LinkedIn Logo"></a>
-			<a href="mailto:marzelop23@gmail.com"><img src="images/email.svg" alt="Email icon"></a>
-			<a href="https://github.com/marzelop"><img src="images/github-mark.svg" alt="GitHub logo"></a>
+			<a href="https://www.linkedin.com/in/marcelo-pereira-170607236/?trk=opento_sprofile_goalscard" target="_blank"><img src="images/linkedin-logo.png" alt="LinkedIn Logo"></a>
+			<a href="mailto:marzelop23@gmail.com" target="_blank"><img src="images/email.svg" alt="Email icon"></a>
+			<a href="https://github.com/marzelop" target="_blank"><img src="images/github-mark.svg" alt="GitHub logo"></a>
 		</div>
 	</footer>
 </body>
