--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<footer>
 		<h2 id="contact">Contato</h2>
 		<div id="contact-container">
-			<a href="https://www.linkedin.com/in/marcelo-pereira-170607236/?trk=opento_sprofile_goalscard" target="_blank"><img src="images/linkedin-logo.png" alt="LinkedIn Logo"></a>
+			<a href="https://www.linkedin.com/in/marcelo-gyovani-pereira-170607236/" target="_blank"><img src="images/linkedin-logo.png" alt="LinkedIn Logo"></a>
 			<a href="mailto:marcelop2307@gmail.com" target="_blank"><img src="images/email.svg" alt="Email icon"></a>
 			<a href="https://github.com/marzelop" target="_blank"><img src="images/github-mark.svg" alt="GitHub logo"></a>
 		</div>
